<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_menu_timer_name"
            android:textColor="@color/textColor"
            android:textSize="@dimen/set_menu_titles" />
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/set_menu_name"
            android:textColor="@color/textColor"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_menu_timer_message"
            android:textColor="@color/textColor"
            android:textSize="@dimen/set_menu_titles" />
        <EditText
            android:id="@+id/etMess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/set_menu_name"
            android:textColor="@color/textColor"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_menu_timer_duration"
            android:textColor="@color/textColor"
            android:textSize="@dimen/set_menu_titles" />
        <TextView
            android:id="@+id/tvDur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/set_menu_duration"
            android:textColor="@color/textColor"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/set_menu_timer_hour"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/set_menu_titles"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/set_menu_timer_min"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/set_menu_titles"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/set_menu_timer_sec"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/set_menu_titles"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <SeekBar
                    android:id="@+id/sbHour"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:max="99"
                    />
                <SeekBar
                    android:id="@+id/sbMin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:max="59"
                    />
                <SeekBar
                    android:id="@+id/sbSec"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:max="59"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/delete"
            android:textColor="@color/textColor"
            android:background="@drawable/border"
            />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:textColor="@color/textColor"
            android:background="@drawable/border"
            />
    </LinearLayout>

</LinearLayout>