<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <FrameLayout
        android:id="@+id/flMainMessBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:id="@+id/tvMainMess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:gravity="center"
            android:background="@drawable/border"
            android:textColor="@color/textColor"
            android:textSize="@dimen/main_message_size"
            android:text="@string/hello"
            />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/flMainMessBack"
        android:layout_above="@id/llBtn"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:id="@+id/timersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:background="@drawable/border"
            android:textColor="@color/textColor"
            android:textSize="@dimen/main_message_size"
            android:gravity="center"
            android:text="@string/add"
            />
        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >
            <FrameLayout
                android:id="@+id/flSoundOffBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/btnSoundOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textColor="@color/textColor"
                android:textSize="@dimen/main_message_size"
                android:gravity="center"
                android:text="@string/sound_off"
                />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>